[gd_scene load_steps=12 format=3 uid="uid://ckiewli615k6h"]

[ext_resource type="Script" path="res://rails/scripts/elevator.gd" id="1_8c1df"]
[ext_resource type="Material" uid="uid://ba4gi4b4lpxtr" path="res://materials/rail.tres" id="2_x1v8h"]
[ext_resource type="Material" uid="uid://covkp10dxj5ft" path="res://materials/extra.tres" id="3_oedkb"]
[ext_resource type="PackedScene" uid="uid://dunas0vesvbno" path="res://rails/models/elevator_entery_gate.glb" id="5_jivcq"]
[ext_resource type="Script" path="res://rails/scripts/elevator_entery_gate.gd" id="6_rqveg"]
[ext_resource type="Material" uid="uid://1fd6csjgylls" path="res://materials/door.tres" id="7_cox00"]
[ext_resource type="PackedScene" uid="uid://5qj6oarn3o6l" path="res://rails/straight_rail.tscn" id="7_wsmay"]

[sub_resource type="CylinderMesh" id="CylinderMesh_c2xm0"]
top_radius = 0.1
bottom_radius = 0.1
height = 5.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hmglp"]
height = 5.0
radius = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cqqok"]
height = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5msvr"]
height = 0.25

[node name="Elevator" type="Node3D"]
script = ExtResource("1_8c1df")
material = ExtResource("2_x1v8h")
extra_material = ExtResource("3_oedkb")
metadata/_edit_group_ = true

[node name="StraightRail" parent="." instance=ExtResource("7_wsmay")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.75, 1.25, 0)

[node name="LeftSideRail" parent="StraightRail" index="0"]
mesh = SubResource("CylinderMesh_c2xm0")

[node name="CollisionShape3D" parent="StraightRail/LeftSideRail/LeftSideRailBody" index="0"]
shape = SubResource("CylinderShape3D_hmglp")

[node name="RightSideRail" parent="StraightRail" index="1"]
mesh = SubResource("CylinderMesh_c2xm0")

[node name="CollisionShape3D" parent="StraightRail/RightSideRail/RightSideRailBody" index="0"]
shape = SubResource("CylinderShape3D_hmglp")

[node name="GateFrontArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.4, 1.65, 0)
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="GateFrontArea"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_cqqok")

[node name="EntryRailArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.892, 1.65, 0)
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="EntryRailArea"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_5msvr")

[node name="elevator_entery_gate" parent="." instance=ExtResource("5_jivcq")]
script = ExtResource("6_rqveg")

[node name="EntryHoleDoor" parent="elevator_entery_gate" index="1"]
surface_material_override/0 = ExtResource("7_cox00")
surface_material_override/1 = ExtResource("7_cox00")

[connection signal="body_entered" from="GateFrontArea" to="elevator_entery_gate" method="_on_gate_front_area_body_entered"]
[connection signal="body_entered" from="EntryRailArea" to="elevator_entery_gate" method="_on_entry_rail_area_body_entered"]
[connection signal="closed" from="elevator_entery_gate" to="." method="_on_elevator_entery_gate_closed"]
[connection signal="entried" from="elevator_entery_gate" to="." method="_on_elevator_entery_gate_entried"]

[editable path="StraightRail"]
[editable path="elevator_entery_gate"]
